[package]
name = "loppel"
version = "0.1.1"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "GPL-3.0-or-later"
description = "Simple local file backups with a bit of compression"
readme = "README.md"
homepage = "https://github.com/PlexSheep/lopppel"
repository = "https://github.com/PlexSheep/lopppel"
keywords = ["cli", "backup", "local-backup"]
categories = ["command-line-utilities", "filesystem"]


[dependencies]

tar = "0.4.44"
clap = { version = "4.5.30", features = ["derive"] }
zstd = { version = "0.13.3", features = [] }

[dev-dependencies]
anyhow = "1.0.97"
assert_cmd = "2.0.16"
cargo-bin = "0.3.0"
fastrand = "2.3.0"
predicates = "3.1.3"
serial_test = "3.2.0"
tempfile = "3.17.1"
